Add Concatenate, Edit Column nodes with WebUI + fix WebUI JAR deployment
- Add Spark Concatenate node (WebUI dialog, pair-based column mapping, type resolution)
- Add Spark Edit Column node (WebUI dialog, inline rename, type cast, reorder)
- Fix WebUI blank dialog in JAR deployment: replace fromFile()+addResourceDirectory()
  with fromString()+addResource() pattern for all 4 WebUI nodes
- Add Rule Engine, Duplicate Row Filter, Row Splitter, Date&Time to String,
  Extract Date&Time Fields, String Replacer, Rank, Constant Value Column,
  Column Combiner, Cell Splitter nodes (total 18 nodes)
- Update all NodeFactory classes to use NodeParameters pattern
- Fix spark3_5 ConcatenateJob defensive schema checks

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>