@@ -1,6 +1,8 @@
 package org.knime.bigdata.spark.dx.node.preproc.constantvalue;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.knime.bigdata.spark.core.port.data.SparkDataPortObjectSpec;
 import org.knime.core.data.DataColumnSpec;
@@ -11,6 +13,13 @@ import org.knime.node.parameters.layout.After;
 import org.knime.node.parameters.layout.Layout;
 import org.knime.node.parameters.layout.Section;
 import org.knime.node.parameters.persistence.Persist;
+import org.knime.node.parameters.updates.Effect;
+import org.knime.node.parameters.updates.Effect.EffectType;
+import org.knime.node.parameters.updates.EffectPredicate;
+import org.knime.node.parameters.updates.EffectPredicateProvider;
+import org.knime.node.parameters.updates.ParameterReference;
+import org.knime.node.parameters.updates.ValueReference;
+import org.knime.node.parameters.updates.util.BooleanReference;
 import org.knime.node.parameters.widget.choices.ValueSwitchWidget;
 import org.knime.node.parameters.widget.choices.RadioButtonsWidget;
 import org.knime.node.parameters.widget.text.TextInputWidget;
@@ -55,6 +64,37 @@ class SparkConstantValueColumnNodeParameters implements NodeParameters {
         @Label("Replace") REPLACE;
     }
 
+    // ── PARAMETER REFERENCES ──────────────────────────────────────────────────
+
+    interface IsMissingRef extends BooleanReference {}
+    interface AppendOrReplaceRef extends ParameterReference<AppendOrReplace> {}
+
+    // ── EFFECT PREDICATES ─────────────────────────────────────────────────────
+
+    /** Hides m_value when m_isMissing is true. */
+    static final class IsMissingPredicate implements EffectPredicateProvider {
+        @Override
+        public EffectPredicate init(final PredicateInitializer i) {
+            return i.getBoolean(IsMissingRef.class).isTrue();
+        }
+    }
+
+    /** Shows m_columnName when output mode is APPEND. */
+    static final class IsAppendPredicate implements EffectPredicateProvider {
+        @Override
+        public EffectPredicate init(final PredicateInitializer i) {
+            return i.getEnum(AppendOrReplaceRef.class).isOneOf(AppendOrReplace.APPEND);
+        }
+    }
+
+    /** Shows m_replaceColumn when output mode is REPLACE. */
+    static final class IsReplacePredicate implements EffectPredicateProvider {
+        @Override
+        public EffectPredicate init(final PredicateInitializer i) {
+            return i.getEnum(AppendOrReplaceRef.class).isOneOf(AppendOrReplace.REPLACE);
+        }
+    }
+
     // ── COLUMN CHOICES PROVIDER ───────────────────────────────────────────────
 
     static final class SparkColumnChoicesProvider implements ColumnChoicesProvider {
@@ -63,8 +103,8 @@ class SparkConstantValueColumnNodeParameters implements NodeParameters {
             return context.getInPortSpec(0)
                 .filter(spec -> spec instanceof SparkDataPortObjectSpec)
                 .map(spec -> ((SparkDataPortObjectSpec) spec).getTableSpec())
-                .map(tableSpec -> tableSpec.stream().toList())
-                .orElse(List.of());
+                .map(tableSpec -> tableSpec.stream().collect(Collectors.toList()))
+                .orElse(Collections.emptyList());
         }
     }
 
@@ -83,6 +123,7 @@ class SparkConstantValueColumnNodeParameters implements NodeParameters {
     @Widget(title = "Use missing value",
         description = "If checked, the column will be filled with missing (null) values of the selected type.")
     @Persist(configKey = SparkConstantValueColumnSettings.CFG_IS_MISSING)
+    @ValueReference(IsMissingRef.class)
     boolean m_isMissing = false;
 
     @Layout(DialogSections.ValueSection.class)
@@ -90,6 +131,7 @@ class SparkConstantValueColumnNodeParameters implements NodeParameters {
         description = "The constant value to fill the column with. "
             + "For Date, use 'yyyy-MM-dd' format. For Timestamp, use 'yyyy-MM-dd HH:mm:ss' format.")
     @TextInputWidget(placeholder = "Enter constant value")
+    @Effect(predicate = IsMissingPredicate.class, type = EffectType.HIDE)
     @Persist(configKey = SparkConstantValueColumnSettings.CFG_VALUE)
     String m_value = "";
 
@@ -100,12 +142,14 @@ class SparkConstantValueColumnNodeParameters implements NodeParameters {
         description = "Append a new column or replace an existing column.")
     @ValueSwitchWidget
     @Persist(configKey = SparkConstantValueColumnSettings.CFG_APPEND_OR_REPLACE)
+    @ValueReference(AppendOrReplaceRef.class)
     AppendOrReplace m_appendOrReplace = AppendOrReplace.APPEND;
 
     @Layout(DialogSections.OutputSection.class)
     @Widget(title = "New column name",
         description = "Name of the new column to append.")
     @TextInputWidget(placeholder = "constant")
+    @Effect(predicate = IsAppendPredicate.class, type = EffectType.SHOW)
     @Persist(configKey = SparkConstantValueColumnSettings.CFG_COLUMN_NAME)
     String m_columnName = "constant";
 
@@ -113,6 +157,7 @@ class SparkConstantValueColumnNodeParameters implements NodeParameters {
     @Widget(title = "Replace column",
         description = "The existing column to replace with the constant value.")
     @ChoicesProvider(SparkColumnChoicesProvider.class)
+    @Effect(predicate = IsReplacePredicate.class, type = EffectType.SHOW)
     @Persist(configKey = SparkConstantValueColumnSettings.CFG_REPLACE_COLUMN)
     String m_replaceColumn = "";
 
